--- a/SlidingLayerSample/res/values/strings.xml
+++ b/SlidingLayerSample/res/values/strings.xml
@@ -5,8 +5,8 @@
   ~ Copyright (C) 2013 6 Wunderkinder GmbH
   ~
   ~ Author: Jose L Ugia - @Jl_Ugia
-  ~ Author: Antonio Consuegra - @aconsuegra
-  ~ Author: Cesar Valiente - @CesarValiente
+  ~ Designer: Benedikt Lehnert - @blehnert
+  ~ Designer: Timothy Achumba - @iam_timm
   ~ Version: 1.0
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -26,20 +26,29 @@
     <string name="app_name">SlidingLayerSample</string>
     
     <string name="pref_title_stick_container">Stick layer to</string>
-    <string name="pref_summary_stick_container">Selects to which side the container is stuck to.</string>
     <string name="pref_title_show_shadow">Show shadow</string>
-    <string name="open_close_button_container">Open / Close</string>
-    <string name="container_button_label">Procrastinating&#8230;</string>
+    <string name="open_button_container">Open</string>
+    <string name="close_button_container">Close</string>
+    
+    <string name="swipe_label">Swipe!</string>
+    <string name="swipe_left_label">Swipe left!</string>
+    <string name="swipe_right_label">Swipe right!</string>
+    
+    <string name="label_right">Right</string>
+    <string name="label_left">Left</string>
+    <string name="label_middle">Middle</string>
+    
+    <string name="not_applicable">n/a</string>
     
     <string-array name="pref_list_titles">
-        <item>Right</item>
-        <item>Left</item>
-        <item>Middle</item>
+        <item>@string/label_right</item>
+        <item>@string/label_middle</item>
+        <item>@string/label_left</item>
     </string-array>
     <string-array name="pref_list_values">
         <item>right</item>
-        <item>left</item>
         <item>middle</item>
+        <item>left</item>
     </string-array>
 
     <string name="pref_go">Go!</string>
